<?xml version="1.0"?>
<package>
  <name>ceng_goto</name>
  <version>0.0.0</version>
  <description>The ceng_goto package</description>

  <maintainer email="kop@todo.todo">kop</maintainer>


  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>

  <export>

  </export>
</package>
